set(RAY_TRACER_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})

set(RAY_TRACER_INCLUDES
	${RAY_TRACER_DIRECTORY}/include
	)

file(GLOB RAY_TRACER_SOURCES ${RAY_TRACER_DIRECTORY}/src/*.cpp)

add_library(RayTracerPlugin
	STATIC
	${RAY_TRACER_SOURCES}
	)
target_compile_definitions(RayTracerPlugin
	PRIVATE
	${EVOENGINE_SDK_DEFS}
	${EVOENGINE_PLUGINS_DEFS}
	)	
target_include_directories(RayTracerPlugin
	PRIVATE
	${EVOENGINE_SDK_INCLUDES}
	${EVOENGINE_PLUGINS_INCLUDES}
	${RAY_TRACER_INCLUDES}
	)

set(RAY_TRACER_PCH ${RAY_TRACER_DIRECTORY}/include/RayTracer_PCH.hpp)
set(RAY_TRACER_PCH ${RAY_TRACER_PCH} PARENT_SCOPE)

target_precompile_headers(RayTracerPlugin
	PRIVATE
	${EVOENGINE_SDK_PCH}
	${EVOENGINE_PLUGINS_PCHS}
	${RAY_TRACER_PCH}
	)

set(EVOENGINE_PLUGINS_INCLUDES ${EVOENGINE_PLUGINS_INCLUDES} ${RAY_TRACER_INCLUDES} PARENT_SCOPE)
set(EVOENGINE_PLUGINS_PCHS ${EVOENGINE_PLUGINS_PCHS} ${RAY_TRACER_PCH} PARENT_SCOPE)
set(EVOENGINE_PLUGINS_DEFS ${EVOENGINE_PLUGINS_DEFS} RAY_TRACER_PLUGIN PARENT_SCOPE)
set(EVOENGINE_PLUGINS_RESOURCES ${EVOENGINE_PLUGINS_RESOURCES} ${CMAKE_CURRENT_SOURCE_DIR}/Internals PARENT_SCOPE)

set(EvoEngine_Plugins ${EvoEngine_Plugins} RayTracerPlugin PARENT_SCOPE)

set_target_properties(RayTracerPlugin PROPERTIES FOLDER "Plugins")